--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,3 +7,4 @@ edition = "2021"
 proc-macro2 = "1.0.62"
 syn = { version = "1.0", features = ["full", "visit"] }
 quote = "1.0"
+clap = { version = "4.5.2", features = ["derive"] }
