--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,3 +8,5 @@ proc-macro2 = "1.0.62"
 syn = { version = "1.0", features = ["full", "visit"] }
 quote = "1.0"
 clap = { version = "4.5.2", features = ["derive"] }
+log = "0.4.21"
+env_logger = "0.11.3"
